WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110228
WeakSet::removeAllocator leaks WeakBlocks
https://bugs.webkit.org/show_bug.cgi?id=110228
Summary
WeakSet::removeAllocator leaks WeakBlocks
Mark Hahnenberg
Reported
2013-02-19 08:58:40 PST
Goodness gracious. We need to return the WeakBlock to the BlockAllocator after the call to WeakBlock::destroy.
Attachments
Patch
(1.21 KB, patch)
2013-02-19 09:08 PST
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-02-19 09:08:20 PST
Created
attachment 189102
[details]
Patch
Geoffrey Garen
Comment 2
2013-02-19 09:27:16 PST
Comment on
attachment 189102
[details]
Patch r=me
WebKit Review Bot
Comment 3
2013-02-19 10:13:44 PST
Comment on
attachment 189102
[details]
Patch Clearing flags on attachment: 189102 Committed
r143351
: <
http://trac.webkit.org/changeset/143351
>
WebKit Review Bot
Comment 4
2013-02-19 10:13:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug